Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-18369

Crash at wsrep_handle_SR_rollback(THD*, THD*): Assertion `victim_thd' failed.

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.4.2
    • 10.4.3
    • Galera
    • None

    Description

      Note wsrep_on=OFF

      /lib/x86_64-linux-gnu/libc.so.6(+0x2dc82)[0x7f6496ecdc82]
      /home/travis/server/bin/mysqld(wsrep_handle_SR_rollback+0xe6)[0x55d7d268101f]
      sql/service_wsrep.cc:141(wsrep_handle_SR_rollback)[0x55d7d2edb222]
      lock/lock0lock.cc:7001(DeadlockChecker::trx_rollback())[0x55d7d2edba86]
      lock/lock0lock.cc:7074(DeadlockChecker::check_and_resolve(ib_lock_t const*, trx_t*))[0x55d7d2ebeb2d]
      lock/lock0lock.cc:1737(lock_rec_enqueue_waiting(ib_lock_t*, unsigned long, buf_block_t const*, unsigned long, dict_index_t*, que_thr_t*, lock_prdt*))[0x55d7d2ec08fa]
      lock/lock0lock.cc:1982(lock_rec_lock(bool, unsigned long, buf_block_t const*, unsigned long, dict_index_t*, que_thr_t*))[0x55d7d2ed5260]
      lock/lock0lock.cc:5879(lock_clust_rec_read_check_and_lock(unsigned long, buf_block_t const*, unsigned char const*, dict_index_t*, unsigned long const*, lock_mode, unsigned long, que_thr_t*))[0x55d7d30a8c63]
      row/row0sel.cc:1265(sel_set_rec_lock(btr_pcur_t*, unsigned char const*, dict_index_t*, unsigned long const*, unsigned long, unsigned long, que_thr_t*, mtr_t*))[0x55d7d30ba4ea]
      row/row0sel.cc:4991(row_search_mvcc(unsigned char*, page_cur_mode_t, row_prebuilt_t*, unsigned long, unsigned long))[0x55d7d2da1ba9]
      handler/ha_innodb.cc:9544(ha_innobase::general_fetch(unsigned char*, unsigned int, unsigned int))[0x55d7d2da2be2]
      handler/ha_innodb.cc:9753(ha_innobase::rnd_next(unsigned char*))[0x55d7d288e23e]
      sql/handler.cc:2974(handler::ha_rnd_next(unsigned char*))[0x55d7d286ce33]
      sql/filesort.cc:770(find_all_keys(THD*, Sort_param*, SQL_SELECT*, SORT_INFO*, st_io_cache*, st_io_cache*, Bounded_queue<unsigned char, unsigned char>*, unsigned long long*))[0x55d7d28697be]
      sql/filesort.cc:272(filesort(THD*, TABLE*, Filesort*, Filesort_tracker*, JOIN*, unsigned long long))[0x55d7d2275179]
      sql/sql_select.cc:22552(create_sort_index(THD*, JOIN*, st_join_table*, Filesort*))[0x55d7d2266077]
      sql/sql_select.cc:20365(st_join_table::sort_table())[0x55d7d22655bc]
      sql/sql_select.cc:20306(join_init_read_record(st_join_table*))[0x55d7d225f3e3]
      sql/sql_select.cc:19387(sub_select(JOIN*, st_join_table*, bool))[0x55d7d225da3b]
      sql/sql_select.cc:18930(do_select(JOIN*, Procedure*))[0x55d7d21fc42f]
      sql/sql_select.cc:4094(JOIN::exec_inner())[0x55d7d21fa0d4]
      sql/sql_select.cc:3889(JOIN::exec())[0x55d7d21fd503]
      sql/sql_select.cc:4295(mysql_select(THD*, TABLE_LIST*, unsigned int, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*))[0x55d7d21d779e]
      sql/sql_select.cc:385(handle_select(THD*, LEX*, select_result*, unsigned long))[0x55d7d215043a]
      sql/sql_parse.cc:4895(mysql_execute_command(THD*))[0x55d7d2165ce4]
      sql/sql_parse.cc:8156(mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool))[0x55d7d213e965]
      sql/sql_parse.cc:1844(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool, bool))[0x55d7d213bb46]
      sql/sql_parse.cc:1395(do_command(THD*))[0x55d7d2496f1c]
      sql/sql_connect.cc:1398(do_handle_one_connection(CONNECT*))[0x55d7d24968f0]
      

      Attachments

        Activity

          People

            jplindst Jan Lindström (Inactive)
            jplindst Jan Lindström (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: