MDEV-18369: Crash at wsrep_handle_SR_rollback(THD*, THD*): Assertion `victim_thd' failed.

Call to wsrep_handle_SR_rollback was missing check that wsrep_on is true.